Layout: fix content overflow in small screens

--- a/packages/spequoia-web/src/components/test-player/test-player.component.scss
+++ b/packages/spequoia-web/src/components/test-player/test-player.component.scss
@@ -166,6 +166,10 @@
 .view-container {
   position: relative;
   align-self: center;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .overlay-box {
