--- a/packages/spequoia-web/src/pages/document-page/document-page.component.scss
+++ b/packages/spequoia-web/src/pages/document-page/document-page.component.scss
@@ -69,7 +69,7 @@ main {
   }
   padding: 1rem;
   flex: 1;
-  max-width: 800px;
+  max-width: min(100%, 800px);
 }
 
 .metadata {
